[package]
name = "concurrent_log"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A log container supporting concurrent append operations"
repository = "https://github.com/spb/concurrent_log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1"

[dependencies]
parking_lot = "0.12"
serde = { version = "1", optional = true }
